Fix block map margin on mobile

--- a/assets/sass/components/blocks/_map.sass
+++ b/assets/sass/components/blocks/_map.sass
@@ -1,3 +1,4 @@
 .block-map
     .map
-        margin: 0
+        margin-bottom: 0
+        margin-top: 0
